# e-signing

./: .gitignore  README.md  eslint.config.js  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: CHROME_EXTENSION_SPEC.md  NATIVE_HOST_DEV.md  NATIVE_HOST_INSTALL.md
helper/: package-lock.json  package.json
helper/packaging/linux/: bridgeit-helper.service  (+2 more)
helper/src/: pkcs11-loader.js  server.js  token-ops.js
installer/linux/: build-pkgs.sh
installer/macos/: build-pkg.sh
installer/windows/: autodcr-bridge.wxs  build-msi.ps1
native-host/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
native-host/launchers/: macos.sh  windows.bat
native-host/manifests/: com.example.autodcr.signer.json
native-host/src/: commands.rs  commands.ts  config.rs  framing.rs  host.ts  logging.rs  main.rs  pdf.rs  pin.rs  pkcs11.rs  protocol.rs  token_detection.rs
native-host/src/shared/: framing.ts  protocol.ts
native-host/tests/: framing_parity.rs
scripts/: build-release.sh  smoke-test.sh
src/: manifest.json
src/app/: layout.tsx  page.tsx
src/background/: service-worker.ts
src/components/: CertPicker.tsx  DscSigningPanel.tsx  InstallBanner.tsx  StatusBadge.tsx
src/content/: content.ts
src/lib/: byte-range.ts  cms-builder.ts  helper-client.ts  helper-detect.ts  pdf-cache.ts  tsa.ts  use-dsc-signer.ts
src/shared/: framing.js  framing.test.ts  framing.ts  origins.test.ts  origins.ts  protocol.js  protocol.ts
src/types/: signing.ts
(+9 files in other folders)
