[package]
name = "autodcr-bridge"
version = "0.1.0"
edition = "2021"
authors = ["AutoDCR"]
description = "AutoDCR Chrome native messaging host with PKCS#11 signing"
license = "Proprietary"
publish = false

[[bin]]
name = "autodcr-bridge"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
toml = "0.8"
directories = "5"
once_cell = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hex = "0.4"

# PKCS#11 client
cryptoki = "0.7"
rusb = { version = "0.9", features = ["vendored"] }

# Certificate parsing for LIST_CERTS metadata
x509-parser = "0.16"

# CMS / PKCS#7 assembly for PDF signatures
cms = "0.2"
der = { version = "0.7", features = ["alloc", "oid"] }
x509-cert = "0.2"
const-oid = { version = "0.9", features = ["db"] }
spki = "0.7"

# Hashing for signed-attrs digest
sha1 = "0.10"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security_Credentials",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[dev-dependencies]
tempfile = "3"
